[metadata]
name = community_image_tests
summary = OpenStack Integration Testing for Community Images in NeCTAR
description-file =
    README.rst
author = R@CMON
author-email = rcmon-support@monash.edu
home-page = https://rcblog.erc.monash.edu.au/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    community_image_tests_tempest_plugin
data_files =
    etc/community_image_tests_tempest_plugin = etc/*

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
tempest.test_plugins =
   community_image_plugin = community_image_tests_tempest_plugin.plugin:CommunityImageTestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1
